# atlas

./: CLAUDE.md  README.md  pyproject.toml
.claude/skills/research/: SKILL.md
docs/superpowers/plans/: 2026-07-23-backend-rework.md  2026-07-24-web-react-vite.md
docs/superpowers/specs/: 2026-07-24-web-react-vite-design.md
server/: db.py  gemma.py  main.py
tests/: conftest.py  test_budget.py  test_chat.py  test_db.py  test_docs.py  test_gemma.py  test_projects.py  test_settle.py  test_static.py  test_threads.py
web/: app.js  index.html  package-lock.json  package.json  style.css  vite.config.ts
web/src/: App.test.tsx  App.tsx  styles.css
web/src/api/: client.test.ts  client.ts  hooks.test.tsx  hooks.ts  sse.test.ts  sse.ts  types.ts
web/src/components/: BudgetGauge.test.tsx  BudgetGauge.tsx  ChatPane.test.tsx  ChatPane.tsx  DocEditor.test.tsx  DocEditor.tsx  DocsPanel.test.tsx  DocsPanel.tsx  Markdown.tsx  SettleOverlay.test.tsx  SettleOverlay.tsx  Sidebar.test.tsx  Sidebar.tsx
web/src/test/: fixtures.ts  msw.ts  setup.ts  utils.tsx
