[project]
name = "atlas"
version = "0.1.0"
description = "Market research + worldbuilding companion for marketing projects"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# starlette TestClient가 httpx import 시점에 뱉는 그 경고 하나만 무시 — 다른 경고는 그대로 노출
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
